Layout: Made a brand new layout for notes list and update counter in video list

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1865,3 +1865,14 @@ body.scrolled .toTop:hover {
     width: auto !important;
     padding-right: 5px;
 }
+
+table td[width="120"] {
+    text-align: right;
+}
+
+.profile_thumb {
+    padding: 0px 10px 0px 0px;
+    width: 50px;
+    display: inline-block;
+    vertical-align: top;
+}
