--- a/Web/Presenters/templates/@listView.xml
+++ b/Web/Presenters/templates/@listView.xml
@@ -2,7 +2,7 @@
 
 {block wrap}
     <div class="page_wrap">
-        <div n:ifset="tabs" class="tabs">
+        <div n:ifset="tabs" n:ifcontent class="tabs">
             {include tabs}
         </div>
 
@@ -24,8 +24,8 @@
                                     </a>
                                 </td>
                                 <td valign="top" style="width: 100%">
-                                    {ifset infotable}
-                                        {include infotable, x => $dat}
+                                    {ifset infoTable}
+                                        {include infoTable, x => $dat}
                                     {else}
                                         <a href="{include link, x => $dat}">
                                             <b>
