Wall: add "object-fit: cover" to .cCompactAvatars
Fixes distortion with squared avatars enabled.

--- a/Web/static/css/avatar.1.css
+++ b/Web/static/css/avatar.1.css
@@ -38,4 +38,5 @@ div.content > table:nth-child(1) > tbody:nth-child(1) > tr:nth-child(1) > td:nth
 .cCompactAvatars {
     width: 30px !important;
     height: 30px !important;
+    object-fit: cover;
 }
