--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1989,112 +1989,102 @@ table td[width="120"] {
 #upload_container h4 {
     border-bottom: solid 1px #daE1E8;
     text-align: left;
-    padding: 0px 0px 4px 0px;
-    margin: 0px;
+    padding: 0 0 4px 0;
+    margin: 0;
 }
 
 #audio_upload {
     width: 350px;
     margin: 20px auto;
-    margin-bottom: 20px;
     margin-bottom: 10px;
-    padding: 15px 0px;
+    padding: 15px 0;
     border: 2px solid #ccc;
     background-color: #EFEFEF;
     text-align: center;
 }
 
 ul {
-    list-style: url(http://vkontakte.ru/images/bullet.gif) outside;
-    margin: 10px 0px;
+    list-style: url(http://vkontakte.ru/images/bullet.gif) outside; /* TODO cock */
+    margin: 10px 0;
     padding-left: 30px;
     color: black;
 }
 
 li {
-    padding: 1px 0px;
+    padding: 1px 0;
 }
 
 #upload_container ul {
     padding-left: 15px;
 }
 
-.audio_list {
-    margin: 5px 20px;
+#audioEmbed {
+    user-select: none;
+    background: #eee;
+    height: 40px;
+    width: 486px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    border: 1px solid #8B8B8B;
 }
 
-.audio_row {
+.audioEntry {
+    display: grid;
+    grid-template-columns: 1fr 10fr 1fr;
+    height: 100%;
     width: 100%;
-    margin-bottom: 10px;
 }
 
-.audio_row .play_button {
-    height: 16px;
-    width: 16px;
-    background: url(http://web.archive.org/web/20101203010619im_/http://vkontakte.ru/images/play.gif);
-    display: inline-block;
-    margin-right: 5px;
-    vertical-align: top;
+.audioEntry > * {
+    padding: 5px;
 }
 
-.audio_row .info {
-    display: inline-block;
-    vertical-align: top;
-    margin-top: 1px;
-    width: 514px;
+.audioEntry .playerButton {
+    position: relative;
 }
 
-.audio_row .duration {
-    display: inline-block;
-    vertical-align: top;
-    color: #777;
-    font-size: 10px;
-    margin-left: 5px;
-    margin-top: 2px;
+.audioEntry .playerButton img {
+    position: absolute;
+    max-width: 50%;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
 }
 
-.audio_row .lines {
-    height: 5px;
-    margin-top: 15px;
-    font-size: 0;
+.audioEntry .status {
+    display: grid;
+    grid-template-columns: 1fr;
 }
 
-.audio_row .lines .dotted {
-    border-top: dashed 1px #d8dfea;
+.audioEntry .status strong {
+    color: #4C4C4C;
 }
 
-.audio_row .active.volume_line {
-    width: 50px;
-    margin-left: 20px;
+.audioEntry .status .track {
+    display: none;
+    padding: 4px 0;
 }
 
-.audio_row .volume_line .dot {
-    width: 10px;
+#audioEmbed .audioEntry .status .track, .audioEntry.playing .status .track {
+    display: unset;
 }
 
-.audio_row .active {
-    border-top: 1px solid #5f7d9d;
-    display: inline-block;
-    margin-bottom: 5px;
+.audioEntry .status .track > .selectableTrack {
+    margin-top: 3px;
+    width: calc(100% - 8px);
+    border-top: #707070 1px solid;
+    height: 6px;
+    cursor: text;
 }
 
-.audio_row .active.duraton_line .dot {
-    width: 15px;
-}
-
-.audio_row .dot {
-    height: 5px;
-    background: #5f7d9d;
-}
-
-.audio_row .active.duraton_line {
-    width: calc(100% - 70px);
-}
-
-.audio_row .add_button {
-    background: url(https://vkontakte.ru/images/plus.gif) no-repeat center;
-    height: 16px;
-    width: 16px;
-    display: inline-block;
-    margin-left: -16px;
+.audioEntry .status .track > div > div {
+    height: 100%;
+    width: 0%;
+    background-color: #BFBFBF;
 }
