Add matomo analytics too

--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -303,6 +303,22 @@
              })(window,document,{$piwik->layer}, {$piwik->site});
             //]]>
         </script>
+        
+        <script n:if="OPENVK_ROOT_CONF['openvk']['telemetry']['matomo']['enable']">
+            {var $matomo = (object) OPENVK_ROOT_CONF['openvk']['telemetry']['matomo']}
+            //<![CDATA[
+            var _paq = window._paq = window._paq || [];
+            _paq.push(['trackPageView']);
+            _paq.push(['enableLinkTracking']);
+            (function() {
+                var u="//" + {$matomo->container} + "/";
+                _paq.push(['setTrackerUrl', u+'matomo.php']);
+                _paq.push(['setSiteId', {$matomo->site}]);
+                var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+                g.type='text/javascript'; g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+            })();
+            //]]>
+        </script>
 
         {ifset bodyScripts}
             {include bodyScripts}
