Global: Stylize #test-label [CSS]
Just to make that block a lil better.

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1334,6 +1334,15 @@ body.scrolled .toTop:hover {
     font-size: 15px;
 }
 
+#test-label {
+    padding: 8pt;
+    margin: 4pt;
+    border: 1px solid #9a205e;
+    background-color: #f5e9ec;
+    position: fixed;
+    font-weight: bold;
+}
+
 .post-upload {
     margin-top: 11px;
     margin-left: 3px;
