--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1648,6 +1648,15 @@ body.scrolled .toTop:hover {
     color: #58462a;
 }
 
+.group-alert {
+    margin-bottom: 8px;
+    padding: 4px;
+    border: 1px solid #c3a476;
+    font-weight: 900;
+    background-color: #f3ddbd;
+    color: #58462a;
+}
+
 .knowledgeBaseArticle {
     margin-top: -11px;
     /* this is very stupid fix but nah */
