--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1905,3 +1905,12 @@ table td[width="120"] {
 .center {
     margin: 0 auto;
 }
+
+#votesBalance {
+    margin-top: 50px;
+    padding: 7px;
+    background-color: #f6f6f6;
+    border-bottom: 1.5px solid #707070;
+    text-align: center;
+    user-select: none;
+}
