Get rid of duplicate DOCTYPE html

--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -1,7 +1,7 @@
 {var instance_name = OPENVK_ROOT_CONF['openvk']['appearance']['name']}
-
+{if !isset($parentModule) || substr($parentModule, 0, 21) === 'libchandler:absolute.'}
 <!DOCTYPE html>
-<html n:if="!isset($parentModule) || substr($parentModule, 0, 21) === 'libchandler:absolute.'">
+<html>
     <head>
         <title>
             {ifset title}{include title} - {/ifset}{$instance_name}
@@ -333,6 +333,7 @@
         {/ifset}
     </body>
 </html>
+{/if}
 
 {if isset($parentModule) && substr($parentModule, 0, 21) !== 'libchandler:absolute.'}
     <!-- INCLUDING TEMPLATE FROM PARENTMODULE: {$parentModule} -->
