--- a/Web/Presenters/templates/@listView.xml
+++ b/Web/Presenters/templates/@listView.xml
@@ -16,7 +16,7 @@
                 {include specpage, x => $dat}
             {else}
                 <div class="container_gray">
-                    {var data = is_array($iterator) ? $iterator : iterator_to_array($iterator)}
+                    {var $data = is_array($iterator) ? $iterator : iterator_to_array($iterator)}
 
                     {if sizeof($data) > 0}
                         <div class="content" n:foreach="$data as $dat">
