--- a/Web/Presenters/templates/@error.xml
+++ b/Web/Presenters/templates/@error.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>An error occurred - {=OPENVK_ROOT_CONF['openvk']['appearance']['name']}</title>
+        <title>An error occurred - {$instance_name}</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <style>
