--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -17,7 +17,7 @@
         {script "js/l10n.js"}
         {script "js/openvk.cls.js"}
 
-        {if $isTimezoned == null}
+        {if $isTimezoned == NULL}
             {script "js/timezone.js"}
         {/if}
 
@@ -26,7 +26,7 @@
                 {css "css/nsfw-posts.css"}
             {/if}
 
-            {if $theme !== null}
+            {if $theme !== NULL}
                 {if $theme->inheritDefault()}
                     {css "css/style.css"}
                     {css "css/dialog.css"}
