Global: Add alerts for air raids in Ukraine

--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -187,11 +187,17 @@
                                 <a n:foreach="$thisUser->getPinnedClubs() as $club" href="{$club->getURL()}" class="link group_link">{$club->getName()}</a>
                             </div>
                             
-                            <div n:if="OPENVK_ROOT_CONF['openvk']['preferences']['commerce'] && $thisUser->getCoins() != 0" id="votesBalance">
-                                {tr("you_still_have_x_points", $thisUser->getCoins())|noescape}
-                                <br /><br />
-                                
-                                <a href="/settings?act=finance">{_top_up_your_account} &#xbb;</a>
+                            <div n:ifcontent class="left-menu-info-box">
+                                {if $isAirRaidAlert}
+                                    <h2 style="color: red; margin: 0; text-transform: uppercase;">{_air_raid_alert}</h2>
+                                    <p style="font-weight: 700;">{$airRaidState}</p>
+                                    <p>{_go_to_the_shelter}</p>
+                                {elseif OPENVK_ROOT_CONF['openvk']['preferences']['commerce'] && $thisUser->getCoins() != 0}
+                                    {tr("you_still_have_x_points", $thisUser->getCoins())|noescape}
+                                    <br /><br />
+
+                                    <a href="/settings?act=finance">{_top_up_your_account} &#xbb;</a>
+                                {/if}
                             </div>
                             
                             <a n:if="OPENVK_ROOT_CONF['openvk']['preferences']['adPoster']['enable'] && $thisUser->getLeftMenuItemStatus('poster')" href="{php echo OPENVK_ROOT_CONF['openvk']['preferences']['adPoster']['link']}" >
