--- a/Web/static/css/avatar.1.css
+++ b/Web/static/css/avatar.1.css
@@ -6,7 +6,7 @@ table.User > tbody:nth-child(1) > tr:nth-child(1) > td:nth-child(1) > a:nth-chil
     object-fit: cover;
 }
 
-.post > tbody:nth-child(1) > tr:nth-child(1) > td:nth-child(1) > img:nth-child(1)
+.post > tbody:nth-child(1) > tr:nth-child(1) > td:nth-child(1) > a:nth-child(1) > img:nth-child(1)
 {
     width: 50px;
     height: 50px;
