--- a/Web/static/css/avatar.2.css
+++ b/Web/static/css/avatar.2.css
@@ -11,7 +11,7 @@ table.User > tbody:nth-child(1) > tr:nth-child(1) > td:nth-child(1) > a:nth-chil
     border-radius: 100px;
 }
 
-.post > tbody:nth-child(1) > tr:nth-child(1) > td:nth-child(1) > img:nth-child(1)
+.post > tbody:nth-child(1) > tr:nth-child(1) > td:nth-child(1) > a:nth-child(1) > img:nth-child(1)
 {
     width: 50px;
     height: 50px;
