--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -798,6 +798,13 @@ table.User {
 .tabs {
     border-bottom: 1px solid #707070;
     padding: 0 10px;
+    margin-left: -10px;
+    width: 607px;
+}
+
+.tabs.stupid-fix {
+    margin-left: 0;
+    width: auto;
 }
 
 #activetabs {
@@ -913,11 +920,19 @@ table.User {
 }
 
 .crp-entry--info {
-    width: 190px;
+    width: 130px;
+    margin-top: 2%;
+}
+
+.crp-entry--message{
+    padding: 3px;
+    width: 395px;
+    border-radius: 3px;
 }
 
 .crp-entry--image>img {
-    max-width: 64px;
+    max-width: 50px;
+    border-radius: 3px;
 }
 
 .crp-entry--info span {
@@ -929,15 +944,14 @@ table.User {
 }
 
 .crp-entry--message.unread {
-    background-color: #ededed;
-    padding: 5px;
-    width: 346px;
+    padding: 3px;
+    width: 395px;
+    background: #e6e6e6;
+    border-radius: 3px;
 }
 
 .messenger-app--messages---message.unread {
     background-color: #ededed;
-    padding: 5px;
-    margin: -5px;
     padding-bottom: 1.2rem;
     margin-bottom: 0;
 }
@@ -955,20 +969,27 @@ table.User {
 }
 
 .crp-entry--message---av img {
-    max-width: 42px;
+    max-width: 32px;
+    border-radius: 3px;
+    margin-top: 20%;
+    margin-left: 10%;
 }
 
 .crp-entry--message---av,
 .crp-entry--message---text {
     display: inline-block;
     vertical-align: top;
+    max-width: 50px;
+    border-radius: 3px;
 }
 
 .crp-entry--message---text {
-    max-height: 45px;
-    max-width: 260px;
+    max-height: 40px;
+    max-width: 310px;
     overflow: hidden;
     text-overflow: ellipsis;
+    /* white-space: nowrap; */ /* myslivets: а как........... */
+    margin-left: 3%;
 }
 
 .crp-entry--message---text,
@@ -976,14 +997,14 @@ table.User {
     color: #404036;
 }
 
-.messenger-app--messages,
 .messenger-app--input {
-    padding: 10px 70px;
+    padding: 10px 60px;
 }
 
 .messenger-app--messages {
     height: 360px;
     overflow-y: auto;
+    padding: 10px 60px;
 }
 
 .messenger-app--messages---message,
@@ -994,19 +1015,30 @@ table.User {
 }
 
 .messenger-app--messages---message {
-    margin-bottom: 1.2rem;
+    margin-bottom: 3px;
+    padding: 10px;
 }
 
-.messenger-app--messages---message .ava,
 .messenger-app--input>.ava {
     width: 52px;
     height: 52px;
+    object-fit: cover;
+    border-radius: 3px;
+}
+
+.messenger-app--messages---message .ava {
+    width: 37px;
+    height: 37px;
+    object-fit: cover;
+    border-radius: 3px;
 }
 
 .messenger-app--messages---message ._content {
-    padding-left: 20px;
-    width: 300px;
+    width: 310px;
+    line-height: 13.2pt;
 }
+
+
 
 .messenger-app--messages---message ._content span,
 .messenger-app--messages---message ._content>a {
