OpenVK Modern: add HD logo buttons for custom header
and do some small cosmetic fixes as well

--- a/themepacks/openvk_modern/stylesheet.css
+++ b/themepacks/openvk_modern/stylesheet.css
@@ -11,15 +11,16 @@ body {
 
 .home_button {
     background: #3C3C3C url("/themepack/openvk_modern/0.0.1.0/resource/2.png") no-repeat;
-	background-size: 80%;
-    background-position-y: 6px;
-    background-position-x: 10px;
+    background-size: 80%;
+    background-position-y: 0px;
+    background-position-x: 2px;
 }
 
 .home_button_custom {
-    background: url("/themepack/openvk_modern/0.0.1.0/resource/4.png") no-repeat;
+    background: #3C3C3C url("/themepack/openvk_modern/0.0.1.0/resource/4.png") no-repeat;
+    background-size: 80%;
     background-position-y: 0px;
-    background-position-x: 1px;
+    background-position-x: 2px;
     text-shadow: none;
 }
 
@@ -203,5 +204,5 @@ input[type~="search"], textarea, select {
 }
 
 #votesBalance {
-    border-bottom: 1.5px solid #f6f6f6;
+    border-bottom: none;
 }
