--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1948,10 +1948,10 @@ table td[width="120"] {
 }
 
 #votesBalance {
-    margin-top: 50px;
+    margin-top: 10px;
     padding: 7px;
     background-color: #f6f6f6;
-    border-bottom: 1.5px solid #707070;
+    border-bottom: 1.5px solid #DDDDDD;
     text-align: center;
     user-select: none;
 }
