Feed: Redesign news a little bit The global news switch is now more prominent, as it has become a tab. Also, the switch for number of posts per page now looks nicer.

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -1611,6 +1611,26 @@ body.scrolled .toTop:hover {
     background-color: rgb(240, 240, 240);
     border-bottom: 1px solid #ccc;
     border-top: 1px solid #ccc;
+    margin-left: -10px;
+    margin-bottom: 10px;
+    width: 611px;
+}
+
+.postFeedWrapperMicroblog {
+    margin-bottom: 5px;
+}
+
+.postFeedBottom .postFeedPaginator {
+    float: right;
+}
+
+.postFeedBottom .postFeedPageSelect {
+    float: left;
+    padding-top: 8px;
+}
+
+#pageSelect {
+    width: 200px;
 }
 
 .user-alert {
