OpenVK Modern: fix left page block, popup dialogue and checkboxes (#610)
* OpenVK Modern: fix left page block and popup dialogue

* OpenVK Modern: fix checkboxes display

--- a/themepacks/openvk_modern/stylesheet.css
+++ b/themepacks/openvk_modern/stylesheet.css
@@ -134,6 +134,10 @@ body {
     border-left: solid 1px #E2E2E2;
 }
 
+.left_small_block {
+    border-right: 1px #fff solid;
+}
+
 .menu_divider {
     background: #E5E5E5;
 }
@@ -159,6 +163,10 @@ input[type~="password"], input[type="email"], input[type="phone"],
 input[type~="email"], input[type~="phone"], input[type="search"],
 input[type~="search"], textarea, select {
     border: 1px solid #E5E5E5;
+}
+
+input[type=checkbox] {
+	background-image: url("/themepack/openvk_modern/0.0.1.0/resource/6.png")
 }
 
 .mb_tab#active div {
@@ -201,10 +209,22 @@ input[type~="search"], textarea, select {
 
 .ovk-diag {
     border: none;
+    border-radius: 2px;
+}
+
+.ovk-diag-cont {
+    border-radius: 2px;
 }
 
 .ovk-diag-head {
     border-bottom: 1px solid #757575;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
+
+.ovk-diag-action {
+	border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
 }
 
 #votesBalance {
