--- a/Web/static/css/avatar.1.css
+++ b/Web/static/css/avatar.1.css
@@ -40,3 +40,9 @@ div.content > table:nth-child(1) > tbody:nth-child(1) > tr:nth-child(1) > td:nth
     height: 30px !important;
     object-fit: cover;
 }
+
+.profile_thumb > a > img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
