--- a/Web/static/css/avatar.2.css
+++ b/Web/static/css/avatar.2.css
@@ -67,3 +67,10 @@ div.ovk-video > div > img
     height: 30px !important;
     object-fit: cover;
 }
+
+.profile_thumb > a > img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 100px;
+}
