Users: Improve the birthday field Now you can hide the year of birth. Also people who were born on January 1, 1970 can specify their date of birth

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -569,6 +569,7 @@ input[type~="email"],
 input[type~="phone"],
 input[type="search"],
 input[type~="search"],
+input[type~="date"],
 select {
     border: 1px solid #C0CAD5;
     padding: 3px;
